[gd_scene load_steps=4 format=3 uid="uid://wofrkfoar8rn"]

[ext_resource type="Script" path="res://scenes/logged_out.gd" id="1_flb6x"]
[ext_resource type="Texture2D" uid="uid://bk562ybu681k7" path="res://assets/galaxy.jpg" id="2_6ltvx"]
[ext_resource type="FontFile" uid="uid://d153mdm4tperu" path="res://assets/Rubik_Distressed/RubikDistressed-Regular.ttf" id="3_nrtk7"]

[node name="LoggedOutScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1080.0
offset_bottom = -1920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flb6x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1090.0
offset_bottom = 1928.0
texture = ExtResource("2_6ltvx")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 175.0
offset_right = 1065.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("3_nrtk7")
theme_override_font_sizes/font_size = 180
text = "CRAVE 
CRUSHER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 332.0
offset_top = 1133.0
offset_right = 1132.0
offset_bottom = 1191.0
theme_override_font_sizes/font_size = 30
text = "Swipe to dodge the junk food!"

[node name="LoginButton" type="Button" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 996.0
offset_right = 828.0
offset_bottom = 1188.0
theme_override_font_sizes/font_size = 60
text = "LOG IN"

[node name="SignupButton" type="Button" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 1368.0
offset_right = 762.0
offset_bottom = 1526.0
theme_override_font_sizes/font_size = 50
text = "SIGN UP"

[node name="bird with balls" type="Label" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 1289.0
offset_right = 712.0
offset_bottom = 1356.0
theme_override_font_sizes/font_size = 40
text = "No account yet?"

[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="SignupButton" to="." method="_on_signup_button_pressed"]
